# anki-ai

./: .env.example  .gitignore  AGENTS.md  ANKI-AI-RUST.md  Cargo.toml  README.md  justfile  pyproject.toml  tasks.py
.claude/: settings.local.json
anki_ai/: backup.py  cards.py  cli.py  collection.py  decks.py  media.py  notes.py  notetypes.py  sync.py  tags.py
docs/: BACKEND_CAPABILITIES.md
skill/: anki.md
src/: backup.rs  cards.rs  collection.rs  deckconfig.rs  decks.rs  main.rs  media.rs  notes.rs  notetypes.rs  sync.rs  tags.rs
src/skill/: anki.md
tests/: test_collection.py  test_decks.py  test_notes.py
