[package]
name = "anki-ai"
version = "1.4.0"
edition = "2021"

[[bin]]
name = "anki-ai"
path = "src/main.rs"

[dependencies]
anki = { git = "https://github.com/ankitects/anki", tag = "25.09.4", package = "anki" }
anki_proto = { git = "https://github.com/ankitects/anki", tag = "25.09.4", package = "anki_proto" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
reqwest = "0.12"
rpassword = "7"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
