[project]
name = "anki-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anki==25.9.4",
    "typer>=0.12",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff", "ty", "invoke"]

[project.scripts]
anki-ai = "anki_ai.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
